# src/app/module/user/user.routes.ts
@@ -3,6 +3,7 @@ import IsAuthorized from '../../middlewares/isAuthorized';
 import ValidateRequest from '../../middlewares/validateRequest';
 import { StudyValidation } from '../study/study.validation';
 import { UserControllers } from './user.controllers';
+import { UserValidation } from './user.validation';
 
 const router = express.Router();
 
@@ -12,6 +13,13 @@ router.get(
   IsAuthorized,
   ValidateRequest(StudyValidation.GenerateStudyPlan),
   UserControllers.GenerateStudyPlan
+);
+
+router.put(
+  '/',
+  IsAuthorized,
+  ValidateRequest(UserValidation.UpdateUser),
+  UserControllers.UpdateUser
 );
 
 export const UserRoutes = router;
